Implement rest api server